test/bpmn/invalid/process-not-executable.bpmn
<definitions id="test">
  <process id="processNotExecutableTest" isExecutable="false" />
</definitions>
